Name: clash-bin
Version: 0.1.1
Copyright: The GHC Team 2005-2007, Christiaan Baaij 2010
License: BSD3
license-file: LICENSE
Author: Christiaan Baaij
Maintainer: christiaan.baaij@gmail.com
Homepage: http://clash.ewi.utwente.nl/
package-url: http://github.com/christiaanb/clash/tree/master/clash-bin
Synopsis: GHC(i) binary loaded with clash library
Description: Basically provide an executable compiler and interactive 
             interpreter for the CLaSH library.
Category: Hardware, Language
Build-Type: Simple
Cabal-Version: >= 1.2.3

Extra-Source-Files: 
    hschooks.c,
    HsVersions.h

Executable clash
    Main-Is: Main.hs
    Build-Depends: base       >= 3   && < 5,
                   array      >= 0.1 && < 0.4,
                   bytestring >= 0.9 && < 0.10,
                   directory  >= 1   && < 1.1,
                   process    >= 1   && < 1.1
    Build-Depends: ghc, ghc-paths, clash
    Build-Depends: filepath >= 1 && < 1.2
    if os(windows)
        Build-Depends: Win32
    else
        Build-Depends: unix

    GHC-Options: -Wall
    CPP-Options: -DGHCI
    GHC-Options: -fno-warn-name-shadowing
    Other-Modules: InteractiveUI, GhciMonad, GhciTags
    Build-Depends: mtl, haskeline
    Extensions: ForeignFunctionInterface,
                UnboxedTuples,
                FlexibleInstances,
                MagicHash,
                CPP, 
                PatternGuards

